# nerf-proto

./: LICENSE  README.md  nerf-proto.cabal
src/NLP/Nerf/: Types.hs
src/NLP/Nerf2/: Active.hs  Alpha.hs  Beta.hs  CFG.hs  Delta.hs  Env.hs  Gamma.hs  ListT.hs  LogReal.hs  Monad.hs  Phi.hs  SpanDiv.hs  Tree.hs  TreeSet.hs  Types.hs
src/NLP/Nerf2/Alpha/: Rec.hs  Ref.hs
src/NLP/Nerf2/Beta/: Ref.hs
src/NLP/Nerf2/Delta/: Ref.hs
src/NLP/Nerf2/Forest/: Phi.hs  Set.hs  SubTree.hs
src/NLP/Nerf2/Gamma/: Ref.hs
src/NLP/Nerf2/Tree/: Alpha.hs  Phi.hs  Prob.hs  Set.hs
tests/: test1.hs
