name:               nerf-proto
version:            0.1.0
synopsis:           Nerf, the named entity recognition tool based on linear-chain CRFs
description:
    Prototype.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/nerf-proto
build-type:         Simple

library
    hs-source-dirs: src

    build-depends:
        base >= 4 && < 5
      , containers
      , vector
      , binary
      , vector-binary >= 0.1 && < 0.2
      , logfloat
      , mtl
      , transformers

    exposed-modules:
        NLP.Nerf2.Types
      , NLP.Nerf2.CFG
      , NLP.Nerf2.Active
      , NLP.Nerf2.SpanDiv
      , NLP.Nerf2.Tree
      , NLP.Nerf2.Tree.Set
      , NLP.Nerf2.Tree.Prob
      , NLP.Nerf2.Tree.Phi

    other-modules:
        NLP.Nerf2.ListT
      , NLP.Nerf2.Alpha.Ref
      , NLP.Nerf2.Alpha.Rec

    ghc-options: -Wall -O2

test-suite test1
    type:           exitcode-stdio-1.0
    main-is:        test1.hs
    build-depends:  QuickCheck
    hs-source-dirs: tests src

source-repository head
    type: git
    location: https://github.com/kawu/nerf-proto.git
